--- a/OurWeb/Views/Category/Create.cshtml
+++ b/OurWeb/Views/Category/Create.cshtml
@@ -30,3 +30,10 @@
         
     </div>
 </form>
+
+
+            @section Scripts{
+                @{
+                    <partial name="_ValidationScriptsPartial"/>
+                }
+            }
